# LEARN-SDK

3rdPart-Jni/: .gitignore
3rdPart-Jni/build_so/: settings.gradle
3rdPart-Jni/build_so/app/: CMakeLists.txt  build.gradle
3rdPart-Jni/build_so/app/src/main/: AndroidManifest.xml
3rdPart-Jni/build_so/app/src/main/cpp/: CMakeLists.txt
3rdPart-Jni/build_so/app/src/main/cpp/include/: add_num.h
3rdPart-Jni/build_so/app/src/main/cpp/src/: add_num.cpp
3rdPart-Jni/build_so/gradle/wrapper/: gradle-wrapper.properties
3rdPart-Jni/thirdjni/: settings.gradle
3rdPart-Jni/thirdjni/app/: CMakeLists.txt  build.gradle
3rdPart-Jni/thirdjni/app/src/main/: AndroidManifest.xml
3rdPart-Jni/thirdjni/app/src/main/cpp/: native-lib.cpp
3rdPart-Jni/thirdjni/gradle/wrapper/: gradle-wrapper.properties
JniCallBack/: .gitignore  settings.gradle
JniCallBack/app/: CMakeLists.txt  build.gradle
JniCallBack/app/src/main/: AndroidManifest.xml
JniCallBack/app/src/main/cpp/: native-lib.cpp
JniCallBack/app/src/main/res/values/: strings.xml  themes.xml
JniCallBack/app/src/main/res/values-night/: themes.xml
JniCallBack/gradle/wrapper/: gradle-wrapper.properties
Test-Opencv-Jni/: .gitignore  settings.gradle
Test-Opencv-Jni/app/: CMakeLists.txt  build.gradle
Test-Opencv-Jni/app/src/main/: AndroidManifest.xml
Test-Opencv-Jni/app/src/main/cpp/: native-lib.cpp
Test-Opencv-Jni/app/src/main/res/layout/: activity_main.xml
Test-Opencv-Jni/gradle/wrapper/: gradle-wrapper.properties
Test-Opencv-Jni/openCVLibrary343/: build.gradle
(+26 files in other folders)
